<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/celcius_to_farenhit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:text="@string/suhu1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/celcius_to_reamur_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:text="@string/suhu2"
        app:layout_constraintBottom_toTopOf="@id/celcius_to_farenhit_btn"
        app:layout_constraintStart_toStartOf="@id/celcius_to_farenhit_btn" />

    <Button
        android:id="@+id/celcius_to_kelvin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:text="@string/suhu3"
        app:layout_constraintStart_toStartOf="@id/celcius_to_farenhit_btn"
        app:layout_constraintTop_toBottomOf="@id/celcius_to_farenhit_btn" />

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.Assesment1.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/penjelasan_assesment1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/celcius_to_reamur_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <TextView
        android:id="@+id/myName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/nama"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sejarah_singkat_suhu_btn"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:minHeight="48dp"
        android:text="Dark Mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myName" />

    <Button
        android:id="@+id/sejarah_singkat_suhu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:minWidth="250dp"
        android:text="@string/suhu4"
        app:layout_constraintStart_toStartOf="@id/celcius_to_farenhit_btn"
        app:layout_constraintTop_toBottomOf="@id/celcius_to_farenhit_btn" />

    <Button
        android:id="@+id/foto_penemu_suhu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="250dp"
        android:text="Foto Para Penemu Suhu"
        app:layout_constraintStart_toStartOf="@id/sejarah_singkat_suhu_btn"
        app:layout_constraintTop_toBottomOf="@id/sejarah_singkat_suhu_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>