<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CelciusToKelvin.CelciusToKelvinFragment">

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/suhu3"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/image_rumus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="TODO"
        android:src="@drawable/image_rumus"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:padding="16dp">


        <ImageView
            android:id="@+id/icon_celcius_to_kelvin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/convert_celcius_kelvin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/convert_celcius_kelvin"
            app:srcCompat="@drawable/ic_convert" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/convert_celcius_kelvin"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/convert"
            app:layout_constraintStart_toEndOf="@id/icon_celcius_to_kelvin"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/celcius_to_kelvin_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/hitung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/convert_celcius_kelvin"
            app:layout_constraintTop_toBottomOf="@id/convert_celcius_kelvin" />

        <TextView
            android:id="@+id/result"
            style="@style/Widget.Assesment1.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_btn"
            tools:text="Nilai Hasil Konversi: 100\u00B0C" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>